[package]
authors = ["rais"]
edition = "2021"
name = "auto-control"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = [
    "async",
    "napi4",
] }
napi-derive = "2"
autopilot = "0.4.0"
tokio = { version = "1.21.2", features = ["full"] }


[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
